// Copyright (c) 2022 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.daml.platform;

option java_package = "com.daml.platform";


message HelloRequest {
    int32 reqInt = 1;
    bytes payload = 2;
}

message HelloResponse {
    int32 respInt = 1;
    bytes payload = 2;
}

service HelloService {
  rpc Single (HelloRequest) returns (HelloResponse);
  rpc ServerStreaming (HelloRequest) returns (stream HelloResponse);
  rpc Fails (HelloRequest) returns (HelloResponse);
}
